add & remove classes

--- a/classes.html
+++ b/classes.html
@@ -9,7 +9,7 @@
           <link href="styleclasses.css" rel="stylesheet" type="text/css">
           <link href="funclasses.js" rel="stylesheet" type="text/js">
           <script src="js/jquery-1.9.1.js"></script>
-          <script src="js/scripts.js"></script>
+          <script src="funclasses.js"></script>
           <title>Colors</title>
         </head>
         <body>
