--- a/DOM.html
+++ b/DOM.html
@@ -12,6 +12,8 @@
           <title>Talk to the web page</title>
         </head>
         <body>
+          <link href="styleDOM.css" rel="stylesheet" type="text/css">
+          <link href="funDOM.js" rel="stylesheet" type="text/js">
           <div class="container">
             <h1>Talk to the web page</h1>
             <p>Click a button to say something to the web page. See what it says back!</p>
